--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -1,9 +1,13 @@
-.button, .controlPanel, .mainContainer, .cardsMainPanel {
+.mainButton, .controlPanel, .mainContainer, .cardsMainPanel {
 	display: block;
 	float: left;
 }
 
-.button {
+.mainButton {
+	width: 200px;
+	height: 60px;
+	padding: 30px;
+	margin: 30px;
 }
 
 .controlPanel {
@@ -16,6 +20,10 @@
 	height: 80%;
 }
 
+.buttonsHeader {
+	
+}
+
 .cardsMainPanel {
 	width: 100%;
 	height: 100%;
@@ -25,7 +33,11 @@
 }
 
 .card {
-	margin: 5px;	
+	margin: 5px;
+}
+
+.cardContainer{
+	padding-left: 10%;
 }
 
 .instructionsPanel {
