--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -42,3 +42,17 @@
 
 .instructionsPanel {
 }
+
+.timerContainer {
+}
+
+.timer {
+}
+
+@external gwt-table-to-excel-form, gwt-table-to-excel-panel, gwt-table-to-excel-exportWidget;
+.gwt-table-to-excel-form {
+}
+.gwt-table-to-excel-panel {
+}
+.gwt-table-to-excel-exportWidget {
+}
