--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -24,7 +24,7 @@
 }
 
 .mainButtonContainer {
-	width: 25%;
+	width: 20%;
 	height: 100%;
 	display: inline-block;
 }
@@ -152,11 +152,28 @@
 }
 
 .timerContainer {
-	
+	width: 20%;
+	height: 100%;
+	float: left;
+	visibility: visible;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 60px;
+	line-height: 60px;
+	text-align: center;
 }
 
 .timer {
 	
+}
+
+.mathMainContainer {
+	display: block;
+	width: 100%;
+	height: 100%;
+	min-width: 700px;
+	min-height: 1000px;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 60px;
 }
 
 .mathContainer {
@@ -166,6 +183,7 @@
 	height: 240px;
 	padding-right: 50%;
 	padding-top: 10%;
+	float: right;
 }
 
 .mathValue {
@@ -217,6 +235,25 @@
 	text-align: center;
 	line-height: 50px;
 	font-size: 42px;
+}
+
+.messagePanel {
+	width: 20%;
+	height: 100%;
+	float: right;
+	visibility: visible;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 60px;
+	line-height: 60px;
+	text-align: center;
+}
+
+.posetiveMessage {
+	color: green;	
+}
+
+.negativeMessage {
+	color: red;
 }
 
 @external gwt-table-to-excel-form, gwt-table-to-excel-panel, gwt-table-to-excel-exportWidget, invisible, exportMainContainer;
