--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -6,12 +6,48 @@
 .mainContainer {
 	width: 100%;
 	height: 100%;
+	background: rgb(206, 220, 231); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(206, 220, 231, 1) 0%,
+		rgba(89, 106, 114, 1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(206,
+		220, 231, 1)), color-stop(100%, rgba(89, 106, 114, 1)));
+	/* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(206, 220, 231, 1) 0%,
+		rgba(89, 106, 114, 1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -ms-linear-gradient(top, rgba(206, 220, 231, 1) 0%,
+		rgba(89, 106, 114, 1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(206, 220, 231, 1) 0%,
+		rgba(89, 106, 114, 1) 100%); /* W3C */
+}
+
+.button {
+	background: rgb(59, 103, 158); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(59, 103, 158, 1) 0%,
+		rgba(43, 136, 217, 1) 50%, rgba(32, 124, 202, 1) 51%,
+		rgba(125, 185, 232, 1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(59,
+		103, 158, 1)), color-stop(50%, rgba(43, 136, 217, 1)),
+		color-stop(51%, rgba(32, 124, 202, 1)),
+		color-stop(100%, rgba(125, 185, 232, 1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(59, 103, 158, 1) 0%,
+		rgba(43, 136, 217, 1) 50%, rgba(32, 124, 202, 1) 51%,
+		rgba(125, 185, 232, 1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(59, 103, 158, 1) 0%,
+		rgba(43, 136, 217, 1) 50%, rgba(32, 124, 202, 1) 51%,
+		rgba(125, 185, 232, 1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(59, 103, 158, 1) 0%,
+		rgba(43, 136, 217, 1) 50%, rgba(32, 124, 202, 1) 51%,
+		rgba(125, 185, 232, 1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(59, 103, 158, 1) 0%,
+		rgba(43, 136, 217, 1) 50%, rgba(32, 124, 202, 1) 51%,
+		rgba(125, 185, 232, 1) 100%); /* W3C */
 }
 
 .mainButton {
 	width: 200px;
 	height: 60px;
-	margin: 25%;
+	margin-top: 10%;
+	margin-left: 12%;
 	font-size: 35px;
 }
 
@@ -104,13 +140,14 @@
 
 .popupTitle {
 	width: 100%;
-	height: 50px;
+	height: 10%;
 	line-height: 50px;
 }
 
 .cardsMainPanel {
 	width: 100%;
 	height: 100%;
+	padding-right: 15%;
 }
 
 .resultPanel {
@@ -119,7 +156,8 @@
 	float: left;
 	width: 100%;
 	font-family: "Times New Roman", Times, serif;
-	font-size: 30px;
+	font-size: 35px;
+	font-weight: bold;
 }
 
 .resultInnerPanel {
@@ -144,7 +182,8 @@
 }
 
 .cardContainer {
-	
+	width: 20%;
+	display: inline-block;
 }
 
 .instructionsPanel {
@@ -154,12 +193,13 @@
 .timerContainer {
 	width: 20%;
 	height: 100%;
-	float: left;
+	float: right;
 	visibility: visible;
 	font-family: "Times New Roman", Times, serif;
 	font-size: 60px;
 	line-height: 60px;
 	text-align: center;
+	color:red;
 }
 
 .timer {
@@ -167,7 +207,7 @@
 }
 
 .mathMainContainer {
-	display: block;
+	display: inline-block;
 	width: 100%;
 	height: 100%;
 	min-width: 700px;
@@ -179,53 +219,52 @@
 .mathContainer {
 	font-family: "Times New Roman", Times, serif;
 	font-size: 60px;
-	width: 300px;
-	height: 240px;
-	padding-right: 50%;
-	padding-top: 10%;
-	float: right;
+	width: 70%;
+	height: 100%;
+	float: left;
+	display: inline-block;
 }
 
 .mathValue {
-	height: 40px;
-	width: 120px;
-	/* padding-left: 10px; */
+	height: 15%;
+	width: 100%;
 	display: block;
-	float: left;
+	float: right;
+	padding-right: 5%;
 }
 
 .addLbl {
-	width: 10px;
-	height: 50px;
+	width: 100%;
+	height: 20%;
 	display: inline-block;
-	float: left;
-	padding-left: 160px;
-	line-height: 100px;
+	float: right;
 }
 
 .equals {
 	display: inline-block;
-	width: 150px;
-	height: 60px;
-	line-height: 70px;
-	text-align: center;
-	float: left;
+	width: 100%;
+	height: 15%;
+	float: right;
+	padding-right: 2%;
 }
 
 .questionPanel {
-	display: block;
-	float: left;
-	width: 100px;
-	height: 245px;
+	display: inline-block;
+	float: right;
+	width: 100%;
+	height: 40%;
+	padding-top: 5%;
+	text-align: right;
+	padding-right: 15%;
 }
 
 .answerPanel {
-	display: block;
-	float: left;
-	width: 200px;
-	height: 70px;
-	padding-left: 27px;
-	padding-top: 40px;
+	display: inline-block;
+	float: right;
+	width: 80%;
+	height: 10%;
+	padding-top: 2%;
+	padding-left: 54%;
 }
 
 .answer {
@@ -235,6 +274,15 @@
 	text-align: center;
 	line-height: 50px;
 	font-size: 42px;
+}
+
+.buttonPanel {
+	display: inline-block;
+	float: left;
+	width: 100%;
+	height: 10%;
+	padding-top: 2%;
+	padding-right: 15%;
 }
 
 .messagePanel {
@@ -249,11 +297,15 @@
 }
 
 .posetiveMessage {
-	color: green;	
+	color: green;
 }
 
 .negativeMessage {
 	color: red;
+}
+
+.regularMessage {
+	color: black;
 }
 
 @external gwt-table-to-excel-form, gwt-table-to-excel-panel, gwt-table-to-excel-exportWidget, invisible, exportMainContainer;
