--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -156,8 +156,37 @@
 	float: left;
 	width: 100%;
 	font-family: "Times New Roman", Times, serif;
-	font-size: 35px;
-	font-weight: bold;
+	font-size: 50px;
+	line-height: 50px;
+	text-align: center;
+}
+
+.resultLeftPanel {
+	float: right;
+	width: 40%;
+	padding: 5%;
+}
+
+.resultCenterPanel {
+	float: right;
+	width: 20%;
+	padding: 5%;
+	padding-top: 3%;
+}
+
+.resultRightPanel {
+	float: right;
+	width: 40%;
+	padding: 5%;
+}
+
+.cardsTimerContainer {
+	width: 100%;
+	height: 100%;
+	float: right;
+	visibility: visible;	
+	color: red;
+	border: 3px solid red;
 }
 
 .resultInnerPanel {
@@ -170,6 +199,12 @@
 }
 
 .resultValue {
+	display: inline-block;
+	padding-left: 30px;
+	direction: ltr;
+}
+
+.timerValue {
 	display: inline-block;
 	padding-left: 30px;
 	direction: ltr;
@@ -191,15 +226,19 @@
 }
 
 .timerContainer {
+	direction: rtl;
 	width: 20%;
-	height: 100%;
-	float: right;
+	height: 15%;
+	float: left;
 	visibility: visible;
 	font-family: "Times New Roman", Times, serif;
 	font-size: 60px;
 	line-height: 60px;
 	text-align: center;
-	color:red;
+	color: red;
+	border: 3px solid red;
+	margin-top: 10%;
+	margin-right: 8%;
 }
 
 .timer {
