--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -52,7 +52,7 @@
 }
 
 .okButton {
-	width: 200px;
+	width: 140px;
 	height: 60px;
 	font-size: 35px;
 	background: green;
@@ -124,6 +124,9 @@
 .popupContainer {
 	width: 100%;
 	height: 100%;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 25px;
+	line-height: 30px;
 	text-align: center;
 }
 
@@ -231,8 +234,8 @@
 	float: left;
 	visibility: visible;
 	font-family: "Times New Roman", Times, serif;
-	font-size: 60px;
-	line-height: 60px;
+	font-size: 45px;
+	line-height: 70px;
 	text-align: center;
 	color: red;
 	border: 3px solid red;
@@ -255,63 +258,72 @@
 }
 
 .mathContainer {
-	font-family: "Times New Roman", Times, serif;
-	font-size: 60px;
-	width: 70%;
+	width: 20%;
 	height: 100%;
 	float: left;
+	text-align: left;
 	display: inline-block;
+	margin-left: 45%;
 }
 
 .mathValue {
 	height: 15%;
 	width: 100%;
 	display: block;
-	float: right;
-	padding-right: 5%;
+	float: left;
+	text-align: left;
 }
 
 .addLbl {
 	width: 100%;
 	height: 20%;
 	display: inline-block;
-	float: right;
+	float: left;
+	margin-left: 53%;
 }
 
 .equals {
 	display: inline-block;
 	width: 100%;
 	height: 15%;
-	float: right;
-	padding-right: 2%;
+	float: left;
+	text-align: left;
+	overflow: hidden;
 }
 
 .questionPanel {
 	display: inline-block;
-	float: right;
-	width: 100%;
+	float: left;
+	width: 60%;
 	height: 40%;
 	padding-top: 5%;
-	text-align: right;
-	padding-right: 15%;
+	text-align: left;
 }
 
 .answerPanel {
 	display: inline-block;
-	float: right;
-	width: 80%;
+	float: left;
+	width: 60%;
 	height: 10%;
-	padding-top: 2%;
-	padding-left: 54%;
+}
+
+.answersContainer {
+	float: left;
+	width: 90%;
 }
 
 .answer {
-	width: 32px;
-	height: 50px;
+	width: 20%;
+	height: 80%;
 	float: left;
 	text-align: center;
 	line-height: 50px;
-	font-size: 42px;
+	font-size: 45px;
+}
+
+.answerContainer {
+	width: 100%;
+	height: 100%;
 }
 
 .buttonPanel {
