adding letters to cards and updating inatructions

--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -223,9 +223,15 @@
 }
 
 .card {
-	margin: 48px;
-	width: 150px;
-	height: 230px;
+	margin: 4% 17%;
+	width: 70%;
+	height: 80%;;
+}
+
+.cardLabel {
+	text-align: center;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 40px;
 }
 
 .cardContainer {
