--- a/src/com/dev/dina/proj/client/resources/css/projectStyle.css
+++ b/src/com/dev/dina/proj/client/resources/css/projectStyle.css
@@ -1,3 +1,4 @@
+@def FONT_FAMILY "Times New Roman", Times, serif;
 .mainButton,.controlPanel,.mainContainer,.cardsMainPanel {
 	display: block;
 	float: left;
@@ -70,7 +71,7 @@
 	height: 40%;
 	display: block;
 	float: left;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 30px;
 }
 
@@ -93,38 +94,52 @@
 }
 
 .examineeLbl {
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 30px;
 }
 
 .examineeText {
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 30px;
 }
 
 .popupPanel {
 	/* min-height: 200px;
-	min-width: 300px; */
-	background: rgb(206, 220, 231); /* Old browsers */
+	min-width: 300px; */ /* background: rgb(206, 220, 231); Old browsers
 	background: -moz-linear-gradient(top, rgba(206, 220, 231, 1) 0%,
-		rgba(89, 106, 114, 1) 100%); /* FF3.6+ */
+		rgba(89, 106, 114, 1) 100%); FF3.6+
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(206,
 		220, 231, 1)), color-stop(100%, rgba(89, 106, 114, 1)));
-	/* Chrome,Safari4+ */
+	Chrome,Safari4+
 	background: -webkit-linear-gradient(top, rgba(206, 220, 231, 1) 0%,
-		rgba(89, 106, 114, 1) 100%); /* Chrome10+,Safari5.1+ */
+		rgba(89, 106, 114, 1) 100%); Chrome10+,Safari5.1+
 	background: -o-linear-gradient(top, rgba(206, 220, 231, 1) 0%,
-		rgba(89, 106, 114, 1) 100%); /* Opera 11.10+ */
+		rgba(89, 106, 114, 1) 100%); Opera 11.10+
 	background: -ms-linear-gradient(top, rgba(206, 220, 231, 1) 0%,
-		rgba(89, 106, 114, 1) 100%); /* IE10+ */
+		rgba(89, 106, 114, 1) 100%); IE10+
 	background: linear-gradient(to bottom, rgba(206, 220, 231, 1) 0%,
-		rgba(89, 106, 114, 1) 100%); /* W3C */
+		rgba(89, 106, 114, 1) 100%); W3C */
+	background: #d0e4f7; /* Old browsers */
+	background: -moz-linear-gradient(top, #d0e4f7 0%, #73b1e7 24%, #0a77d5 50%, #539fe1
+		79%, #87bcea 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d0e4f7),
+		color-stop(24%, #73b1e7), color-stop(50%, #0a77d5),
+		color-stop(79%, #539fe1), color-stop(100%, #87bcea));
+	/* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #d0e4f7 0%, #73b1e7 24%, #0a77d5 50%,
+		#539fe1 79%, #87bcea 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #d0e4f7 0%, #73b1e7 24%, #0a77d5 50%, #539fe1
+		79%, #87bcea 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #d0e4f7 0%, #73b1e7 24%, #0a77d5 50%, #539fe1
+		79%, #87bcea 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #d0e4f7 0%, #73b1e7 24%, #0a77d5 50%, #539fe1
+		79%, #87bcea 100%); /* W3C */
 }
 
 .popupContainer {
 	width: 100%;
 	height: 100%;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 25px;
 	line-height: 30px;
 	text-align: center;
@@ -132,13 +147,19 @@
 
 .popupTextArea {
 	width: 90%;
-	height: 75%;
+	height: 65%;
 	resize: none;
 }
 
+.popupWidgetPanel {
+	width: 100%;
+	height: 10%;
+}
+
 .popupCloseButton {
-	width: 100px;
-	height: 30px;
+	width: 20%;
+	height: 13%;
+	line-height: 13%;
 }
 
 .popupTitle {
@@ -150,7 +171,7 @@
 .countDownLabel {
 	width: 100%;
 	height: 10%;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 35px;
 	text-align: left;
 }
@@ -166,7 +187,7 @@
 	display: block;
 	float: left;
 	width: 100%;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 45px;
 	line-height: 45px;
 	text-align: center;
@@ -174,8 +195,8 @@
 
 .resultLeftPanel {
 	float: right;
-	width: 40%;
-	padding: 5%;
+	width: 45%;
+	padding-top: 5%;
 }
 
 .resultCenterPanel {
@@ -186,8 +207,11 @@
 
 .resultRightPanel {
 	float: right;
-	width: 40%;
-	padding: 5%;
+	width: 45%;
+}
+
+.resultTopPanel {
+	width: 100%;
 }
 
 .cardsTimerContainer {
@@ -230,8 +254,14 @@
 
 .cardLabel {
 	text-align: center;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 40px;
+}
+
+.selectedDeck {
+	border: 3px rgb(184, 1, 1);
+	border-style: dotted;
+	border-radius: 35px;
 }
 
 .cardContainer {
@@ -249,7 +279,7 @@
 	height: 15%;
 	float: left;
 	visibility: visible;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 45px;
 	line-height: 70px;
 	text-align: center;
@@ -269,7 +299,7 @@
 	height: 100%;
 	min-width: 700px;
 	min-height: 1000px;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 60px;
 }
 
@@ -356,7 +386,7 @@
 	height: 100%;
 	float: right;
 	visibility: visible;
-	font-family: "Times New Roman", Times, serif;
+	font-family: FONT_FAMILY;
 	font-size: 60px;
 	line-height: 60px;
 	text-align: center;
@@ -412,4 +442,21 @@ button.gwt-table-to-excel-exportWidget {
 	float: left;
 	width: 100%;
 	height: 300px;
+}
+
+.stressPanel {
+	width: 100%;
+	text-align: center;
+}
+
+.stressRadio {
+	width: 7%;
+	font-family: FONT_FAMILY;
+	font-size: 20px;
+}
+
+.stressLabel {
+	font-family: FONT_FAMILY;
+	font-size: 28px;
+	text-align: center;
 }
